chore: enhance documentation and utilities in builder package
- Added new utilities for Projection and CustomPicker in index.ts
- Updated deploy-docs.yml to trigger on changes in documentation paths
- Included CustomPicker performance dashboard link in server.js logs

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches: ["main"]
     # Optional: only trigger when docs change
-    # paths:
-    #   - 'packages/docs/**'
+    paths:
+       - 'packages/docs/**'
     #   - 'packages/builder/**'
     #   - '.github/workflows/deploy-docs.yml'
 
