--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -12,7 +12,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@noony-serverless/type-builder": "file:../builder",
+    "@noony-serverless/type-builder": "workspace:*",
     "zod": "^3.22.0",
     "benchmark": "^2.1.4",
     "clinic": "^12.0.0"
