--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,6 +49,40 @@ jobs:
       - name: Configure npm authentication
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
+      - name: Validate main branch CI status
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { data: workflows } = await github.rest.actions.listWorkflowsForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo
+            });
+            
+            const ciWorkflow = workflows.workflows.find(w => w.name === 'CI');
+            if (!ciWorkflow) {
+              throw new Error('CI workflow not found');
+            }
+            
+            const { data: runs } = await github.rest.actions.listWorkflowRuns({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: ciWorkflow.id,
+              branch: 'main',
+              status: 'completed',
+              per_page: 1
+            });
+            
+            if (runs.workflow_runs.length === 0) {
+              throw new Error('No completed CI runs found on main branch');
+            }
+            
+            const latestRun = runs.workflow_runs[0];
+            if (latestRun.conclusion !== 'success') {
+              throw new Error(`Latest CI run on main branch failed with conclusion: ${latestRun.conclusion}`);
+            }
+            
+            console.log(`✅ Latest CI run on main branch was successful (${latestRun.html_url})`);
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
