--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clean": "turbo run clean"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
