--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,7 @@ permissions:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     steps:
       - name: Checkout code
@@ -33,43 +34,84 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.18.3
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Configure npm authentication
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+
+      - name: Validate main branch CI status
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { data: workflows } = await github.rest.actions.listWorkflowsForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo
+            });
+            
+            const ciWorkflow = workflows.workflows.find(w => w.name === 'CI');
+            if (!ciWorkflow) {
+              throw new Error('CI workflow not found');
+            }
+            
+            const { data: runs } = await github.rest.actions.listWorkflowRuns({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: ciWorkflow.id,
+              branch: 'main',
+              status: 'completed',
+              per_page: 1
+            });
+            
+            if (runs.workflow_runs.length === 0) {
+              throw new Error('No completed CI runs found on main branch');
+            }
+            
+            const latestRun = runs.workflow_runs[0];
+            if (latestRun.conclusion !== 'success') {
+              throw new Error(`Latest CI run on main branch failed with conclusion: ${latestRun.conclusion}`);
+            }
+            
+            console.log(`✅ Latest CI run on main branch was successful (${latestRun.html_url})`);
+
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Build packages
-        run: npm run build
+        run: pnpm run build
 
       - name: Run tests
-        run: npm run test
+        run: pnpm run test
+
+      - name: Run linter
+        run: pnpm run lint
 
       - name: Verify package contents
         run: |
           cd packages/builder
-          npm pack --dry-run
+          pnpm pack --dry-run
           ls -la dist/
 
       - name: Publish to npm (dry run)
         if: ${{ inputs.dry_run == true }}
         run: |
           cd packages/builder
-          npm publish --dry-run --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          pnpm publish --dry-run --access public --no-git-checks
 
       - name: Publish to npm
         if: ${{ inputs.dry_run != true }}
         run: |
           cd packages/builder
-          npm publish --access public --provenance
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          pnpm publish --access public --provenance --no-git-checks
 
       - name: Get package version
         id: package_version
@@ -80,12 +122,10 @@ jobs:
 
       - name: Create GitHub Release
         if: ${{ inputs.dry_run != true && startsWith(github.ref, 'refs/tags/') }}
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
           body: |
             ## @noony-serverless/type-builder v${{ steps.package_version.outputs.version }}
 
@@ -94,11 +134,14 @@ jobs:
             ### Installation
             ```bash
             npm install @noony-serverless/type-builder@${{ steps.package_version.outputs.version }}
+            # or with pnpm
+            pnpm add @noony-serverless/type-builder@${{ steps.package_version.outputs.version }}
             ```
 
             See [CHANGELOG.md](CHANGELOG.md) for details.
           draft: false
           prerelease: false
+          generate_release_notes: true
 
       - name: Summary
         if: ${{ inputs.dry_run != true }}
