--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ultra-fast-typer-builder",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Ultra-fast TypeScript builder library with auto-detection for Zod, Classes, and Interfaces",
   "private": true,
   "workspaces": [
     "packages/*"
   ],
+  "packageManager": "pnpm@10.18.3",
   "scripts": {
     "build": "turbo run build",
     "test": "turbo run test",
@@ -24,6 +25,7 @@
     "clean": "turbo run clean"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
@@ -32,7 +34,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
-    "turbo": "^1.10.0",
+    "turbo": "^2.5.8",
     "typescript": "^5.0.0"
   },
   "engines": {
