chore: disable Codecov upload in CI workflow
- Commented out the Codecov upload step in `ci.yml` to prevent coverage uploads until the CODECOV_TOKEN secret is configured.
- Updated `publish.yml` to use the `listRepoWorkflows` method for improved clarity in workflow retrieval.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,15 +81,16 @@ jobs:
       - name: Run tests
         run: pnpm run test
 
-      - name: Upload coverage (Node 20 only)
-        if: matrix.node == '20'
-        uses: codecov/codecov-action@v4
-        continue-on-error: true
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./packages/builder/coverage/coverage-final.json
-          flags: unittests
-          name: codecov-umbrella
+      # Codecov upload disabled - configure CODECOV_TOKEN secret to enable
+      # - name: Upload coverage (Node 20 only)
+      #   if: matrix.node == '20'
+      #   uses: codecov/codecov-action@v4
+      #   continue-on-error: true
+      #   with:
+      #     token: ${{ secrets.CODECOV_TOKEN }}
+      #     files: ./packages/builder/coverage/coverage-final.json
+      #     flags: unittests
+      #     name: codecov-umbrella
 
   benchmark:
     name: Benchmark
