--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const { data: workflows } = await github.rest.actions.listWorkflowsForRepo({
+            const { data: workflows } = await github.rest.actions.listRepoWorkflows({
               owner: context.repo.owner,
               repo: context.repo.repo
             });
