--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -98,9 +98,8 @@ jobs:
       - name: Verify package contents
         run: |
           cd packages/builder
-          pnpm pack
+          pnpm pack --dry-run
           ls -la dist/
-          ls -la *.tgz
 
       - name: Publish to npm (dry run)
         if: ${{ inputs.dry_run == true }}
@@ -108,18 +107,50 @@ jobs:
           cd packages/builder
           pnpm publish --dry-run --access public --no-git-checks
 
-      - name: Publish to npm
-        if: ${{ inputs.dry_run != true }}
+      - name: Check if version already published
+        id: check_version
         run: |
           cd packages/builder
-          pnpm publish --access public --provenance --no-git-checks || {
-            if echo "$?" | grep -q "403"; then
-              echo "⚠️ Package version already published, skipping..."
-              exit 0
-            else
-              exit 1
-            fi
-          }
+          PACKAGE_NAME=$(node -p "require('./package.json').name")
+          VERSION=$(node -p "require('./package.json').version")
+
+          if npm view "${PACKAGE_NAME}@${VERSION}" version 2>/dev/null; then
+            echo "exists=true" >> $GITHUB_OUTPUT
+            echo "⚠️ Version ${VERSION} already published to npm"
+          else
+            echo "exists=false" >> $GITHUB_OUTPUT
+            echo "✅ Version ${VERSION} not yet published"
+          fi
+
+      - name: Publish to npm
+        if: ${{ inputs.dry_run != true && steps.check_version.outputs.exists != 'true' }}
+        run: |
+          cd packages/builder
+          set +e  # Don't exit on error immediately
+          OUTPUT=$(pnpm publish --access public --provenance --no-git-checks 2>&1)
+          EXIT_CODE=$?
+          echo "$OUTPUT"
+
+          # Check if publish was successful or already published
+          if [ $EXIT_CODE -eq 0 ]; then
+            echo "✅ Successfully published to npm"
+            exit 0
+          elif echo "$OUTPUT" | grep -q "cannot publish over the previously published versions"; then
+            echo "⚠️ Version already published (caught during publish)"
+            exit 0
+          elif echo "$OUTPUT" | grep -q "You cannot publish over the previously published versions"; then
+            echo "⚠️ Version already published (caught during publish)"
+            exit 0
+          else
+            echo "❌ Publish failed with exit code $EXIT_CODE"
+            exit $EXIT_CODE
+          fi
+
+      - name: Already published notice
+        if: ${{ inputs.dry_run != true && steps.check_version.outputs.exists == 'true' }}
+        run: |
+          echo "### ⚠️ Version Already Published" >> $GITHUB_STEP_SUMMARY
+          echo "This version is already available on npm. Skipping publish step." >> $GITHUB_STEP_SUMMARY
 
       - name: Get package version
         id: package_version
